Большая доработка сайта

--- a/css/product.scss
+++ b/css/product.scss
@@ -10,11 +10,10 @@
 @import url('blocks/header/navigation.css');
 @import url('blocks/header/user-info.css');
 @import url('blocks/header/basket.css');
-@import url('blocks/catalog/catalog.css');
-@import url('blocks/catalog/product.css');
-@import url('blocks/catalog/pagination.css');
+@import url('blocks/product/product.css');
+@import url('blocks/product/sizes.css');
+@import url('blocks/product/cart.css');
 @import url('blocks/footer/footer.css');
 @import url('blocks/footer/collections.css');
 @import url('blocks/footer/about.css');
 @import url('blocks/footer/social.css');
-
