--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,9 @@
 @import url("blocks/header/navigation.css");
 @import url("blocks/header/user-info.css");
 @import url("blocks/header/basket.css");
-@import url("blocks/catalog/catalog.css");
-@import url("blocks/catalog/product.css");
-@import url("blocks/catalog/pagination.css");
+@import url("blocks/main/main-header.css");
+@import url("blocks/main/container.css");
+@import url("blocks/main/subscribe.css");
 @import url("blocks/footer/footer.css");
 @import url("blocks/footer/collections.css");
 @import url("blocks/footer/about.css");
@@ -16,4 +16,4 @@
   padding: 0;
   border: 0;
 }
-/*# sourceMappingURL=catalog.css.map */
+/*# sourceMappingURL=main.css.map */
