--- a/css/main.scss
+++ b/css/main.scss
@@ -10,11 +10,10 @@
 @import url('blocks/header/navigation.css');
 @import url('blocks/header/user-info.css');
 @import url('blocks/header/basket.css');
-@import url('blocks/catalog/catalog.css');
-@import url('blocks/catalog/product.css');
-@import url('blocks/catalog/pagination.css');
+@import url('blocks/main/main-header.css');
+@import url('blocks/main/container.css');
+@import url('blocks/main/subscribe.css');
 @import url('blocks/footer/footer.css');
 @import url('blocks/footer/collections.css');
 @import url('blocks/footer/about.css');
 @import url('blocks/footer/social.css');
-
